# customize_python_embedded_example

./: Cargo.toml  README.md  build.rs
.cargo/: config  config.toml
src/: lib.rs  main.rs  pyo3_build_config_customize.rs  tool.rs
xtask/: Cargo.toml  build.rs
xtask/src/: main.rs  main.rs_bak  pyo3_build_config.rs  pyo3_build_config_customize.rs  python_embedding_customize.rs
