[package]
name = "customize_python_embedded"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.15.0"
thiserror = "1.0.37"
anyhow = "1.0.65"
pyembed = "0.22.0"


[build-dependencies]
anyhow = "1.0.65"
pyoxidizer = "0.22.0"
python-packaging = { version = "0.14.0", features = ["spdx-text"] }
tugger-file-manifest = "0.9.0"
pyo3-build-config="0.16.6"