[package]
name = "customize_python_embedded"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"


[lib]
crate-type = ["rlib"]

[profile.dev]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
anyhow = "1"
once_cell = "1.15.0"
thiserror = "1.0.37"
pyembed = "0.22.0"
pyo3-build-config="0.*"
pyo3 ={ version = "0.16.5",default-features = false,features = ["macros"]}



[build-dependencies]
pyo3-build-config="0.*"
anyhow = "1"

